# SketchAI

./: LICENSE  README.md  backprop_pixel_space.py  bezier.py  bezier_renderer.py  circle_renderer.py  clip_finetuning.ipynb  closed_bezier_renderer.py  main.py  one_at_a_time.py  pyproject.toml  quickdraw_preprocessor.py  render.py  renderer.py  similarity.py  similarity2.py  similarity3.py  straight_renderer.py  stroke.py
